Fix Either Issue and Implement Lots of Accumulated TODOs (#36)
* Fixed Either.flatMap*, and added the (missing) tests which would have uncovered it

* Added parse* options, and related tests

* Enhanced the CollectionsOps.isUnmodifiable implementations

* Added filter/filterNot methods, added null guards, and added related tests

* Added newArrayList and newLinkedList methods to ListsOps, hardended appendItem and appendLists, updated Javadocs, and added related tests

* Tiny tweak to ListOps that should have been in the prior commit

* Added newHashSet and newLinkedHashSet methods to SetsOps, hardended addItem, appendItem, addSets, and appendSets, updated Javadocs, and added related tests

* Removed deprecated method SetsOps.contrastSetPair method, and associated test coverage

* Added newHashMap and newLinkedHashMap methods to MapsOps, hardended addEntry, appendEntry, addMaps, and appendMaps, refactored both swap and swapOrdered methods, updated Javadocs, and added related tests

* Updated refined NonEmpty* collections to gracefully handle null (even though it should never be passed because of the use of @NullMarked), added a toNonEmpty to each of ListsOps, SetsOps, and MapsOps, and then added the appropriate tests